--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ flask = "^3.0.0"
 gunicorn = "^21.2.0"
 flask-admin = "^1.6.1"
 pytz = "^2023.3.post1"
-murshop24-models = {git = "https://github.com/klim-neumann/murshop24-models.git"}
+murshop24-models = {git = "https://github.com/klim-neumann/murshop24-models.git", branch="main"}
 httpx = "^0.25.1"
 jinja2 = "^3.1.2"
 flask-sqlalchemy = "^3.1.1"
