--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 annotated-types==0.6.0 ; python_version >= "3.11" and python_version < "4.0"
 anyio==4.0.0 ; python_version >= "3.11" and python_version < "4.0"
 blinker==1.7.0 ; python_version >= "3.11" and python_version < "4.0"
-certifi==2023.7.22 ; python_version >= "3.11" and python_version < "4.0"
+certifi==2023.11.17 ; python_version >= "3.11" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.11" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0" and platform_system == "Windows"
 flask-admin==1.6.1 ; python_version >= "3.11" and python_version < "4.0"
@@ -16,11 +16,11 @@ idna==3.4 ; python_version >= "3.11" and python_version < "4.0"
 itsdangerous==2.1.2 ; python_version >= "3.11" and python_version < "4.0"
 jinja2==3.1.2 ; python_version >= "3.11" and python_version < "4.0"
 markupsafe==2.1.3 ; python_version >= "3.11" and python_version < "4.0"
-murshop24-models @ git+https://github.com/klim-neumann/murshop24-models.git@HEAD ; python_version >= "3.11" and python_version < "4.0"
+murshop24-models @ git+https://github.com/klim-neumann/murshop24-models.git@main ; python_version >= "3.11" and python_version < "4.0"
 packaging==23.2 ; python_version >= "3.11" and python_version < "4.0"
-psycopg==3.1.12 ; python_version >= "3.11" and python_version < "4.0"
+psycopg==3.1.13 ; python_version >= "3.11" and python_version < "4.0"
 pydantic-core==2.14.3 ; python_version >= "3.11" and python_version < "4.0"
-pydantic-settings==2.0.3 ; python_version >= "3.11" and python_version < "4.0"
+pydantic-settings==2.1.0 ; python_version >= "3.11" and python_version < "4.0"
 pydantic==2.5.1 ; python_version >= "3.11" and python_version < "4.0"
 python-dotenv==1.0.0 ; python_version >= "3.11" and python_version < "4.0"
 pytz==2023.3.post1 ; python_version >= "3.11" and python_version < "4.0"
